--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         const data = document.getElementById('data').value;
         
         try {
-          const response = await fetch('nelson-development-api-test-4xa2.vercel.app', {
+          const response = await fetch('http://localhost:3000', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
