--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         const data = document.getElementById('data').value;
         
         try {
-          const response = await fetch('http://localhost:3000/sort', {
+          const response = await fetch('https://nelson-development-api-test.onrender.com/sort', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
